# zahosts-health

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.php  pyproject.toml  requirements-dev.txt  zahosts-health.conf  zahosts-health.cron  zahosts-health.json.example  zahosts_health.py
.github/workflows/: ci.yml
scripts/: install.sh  uninstall.sh
tests/: conftest.py  test_autossl_collector.py  test_backup_collector.py  test_dnsbl_collector.py  test_email_auth_collector.py  test_mail_collector.py  test_payload_contract.py  test_runner.py  test_security_collector.py  test_server_collector.py  test_wordpress_collector.py
tests/fixtures/: autossl_empty.json  autossl_logs.json  autossl_pending.json  backup_config_disabled.json  backup_config_enabled.json  backup_dates.json  backup_dates_empty.json  backup_destinations.json  backup_destinations_empty.json  backup_log_failed.txt  backup_log_success.txt  cphulk_brutes.json  cphulk_disabled.json  cphulk_enabled.json  dmarc_present.txt  emailauth_spf_invalid.json  emailauth_spf_valid.json  exim_bp.txt  exim_mainlog_tail.txt  ps_backup_running.txt  ps_idle.txt  security_mainlog_distributed.txt  security_mainlog_tail.txt  wp_clean.json  wp_invalid.txt  wp_risky.json  wp_updates.json
zahosts_health/: __init__.py  __main__.py  runner.py
zahosts_health/collectors/: __init__.py  autossl.py  backup.py  base.py  dnsbl.py  email_auth.py  mail.py  security.py  server.py  wordpress.py
